welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: reassignment to val
  if(vacation=true && day =1 || day=2 ||day=3||day=4||day=5){
             ^alarmClock:5: error: reassignment to val
  else if (vacation=true && day=0||day=6){
                   ^alarmClock:8: error: reassignment to val
  else if (vacation = false && day=1 || day=2 ||day=3||day=4||day=5){
                    ^